# slint-vita

./: .eslintrc.json  .gitignore  Cargo.toml  README.md  package.json  tsconfig.json
LICENSES/: MIT.txt
node/: bubble.controller.js  bubble.service.js  main.js
node-ui/: index.js  package.json
node/controllers/: bubble_controller.js  page_controller.js
node/services/: bubble_service.js  page_service.js
src/: main.rs  main.ts
src/assets/: icons.ts
src/controllers/: app_bar_controller.ts  launcher_controller.ts  list_controller.ts  notification_controller.ts  trophies_controller.ts
src/data/: bubble.ts  game.ts  list.ts  notification.ts  page.ts
src/keys/: view.ts
src/services/: bubble_service.ts  navigation_service.ts  notification_service.ts  setttings_service.ts  storage_service.ts  time_service.ts  trophy_service.ts
ui/: app_view.slint  appwindow.slint  base_view.slint  bubble_launcher.slint  main_window.slint  path_button.slint  paths.slint  state_area.slint  theme.slint  trophies_view.slint
ui-import/: package.json
ui/assets/: forkawesome-webfont.ttf.license
ui/styling/: icons.slint  paths.slint  theme.slint
ui/views/: app_bar_view.slint  launcher_view.slint  list_view.slint  notification_view.slint  trophies_view.slint  views.slint
ui/widgets/: animation_container.slint  bubble_launcher.slint  container.slint  icon.slint  image_button.slint  item.slint  list_view.slint  page.slint  page_scroll_view.slint  pageination.slint  path_button.slint  round_button.slint  state_area.slint  widgets.slint
vita/: .gitignore
vita-ts/: package.json
(+24 files in other folders)
