[package]
name = "vita"
version = "0.1.0"
authors = ["Florian Blasius <florian.blasius@slint-ui.com>"]
edition = "2021"
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
slint = "0.3.5"

[build-dependencies]
slint-build = "0.3.5"
